--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,5 +21,28 @@ jobs:
       # testy!!!!!
       - name: Tests
         run: make test
-
-#asdfas
+    docker:
+        runs-on: ubuntu-latest
+        steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.Jac0bK }}
+          password: ${{ secrets.dckr_pat_51LlDJsg6GfyETFQLe-bIZ_sYbk }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: user/app:latest
